--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "graphql-request": "^7.2.0",
+    "next": "15.3.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "next": "15.3.2"
+    "shopify-buy": "^3.0.4"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.16",
